[package]
name = "domain"
version = "0.1.0"
authors = ["ryutah <6662577+ryutah@users.noreply.github.com>"]
edition = "2018"

[dependencies]
derive-getters = "0.2.0"
derive-new = "0.5.9"
libmww = { path = "../libmww" }
anyhow = "1.0.40"
async-trait = "0.1.50"
strum = "0.21"
strum_macros = "0.21"
libmww_macro = { path = "../libmww_macro" }
chrono = "0.4"
chrono-tz = "0.5"
rand = "0.8.4"

[dev-dependencies]
test-case = "1.1.0"
mockall = "0.10.2"
async-std = { version = "1.9.0", features = ["attributes"] }
