[package]
name = "libmww"
version = "0.1.0"
authors = ["ryutah <6662577+ryutah@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.50"
thiserror = "1.0.24"
test-case = "1.1.0"
rand = "0.8.4"
derive-new = "0.5.9"
mockall = "0.10.2"
chrono = "0.4.19"
chrono-tz = "0.5.3"
